# SET09102-GroupProject

./: App.xaml  App.xaml.cs  AppShell.xaml  AppShell.xaml.cs  Doxyfile  MauiProgram.cs  README.md  environmentMonitoring.csproj  environmentMonitoring.sln  sensorconfig.xaml  sensorconfig.xaml.cs
.github/workflows/: build.yml  documentation.yml
Helpers/: DatabaseHelper.cs  env.db
data/: .gitignore  data_diagram.dbml  users.sql
data/generator/: pyproject.toml
data/generator/csv/: Air_quality.csv  Metadata.csv  Water_quality.csv  Weather.csv
data/generator/sql/: init.sql
data/generator/src/: main.py
docs/: notes.md  requirements.md  scenario.md
docs/UML/: README.md  class_diagram.drawio  nav_flow.drawio  rolesUseCaseDiagram.drawio
docs/UML/James Diagrams/: Activity Diagram for Navigating to Sensor.vpd  Incident Report.vpd  Sequence Diagram - create role.vpd
environmentMonitoring/: .gitignore  AppShell.xaml  environmentMonitoring.sln
environmentMonitoring/environmentMonitoring/: App.xaml.cs  AppShell.xaml  AppShell.xaml.cs  MainPage.xaml  MainPage.xaml.cs  MauiProgram.cs  environmentMonitoring.csproj
environmentMonitoring/environmentMonitoring.Database/: environmentMonitoring.Database.csproj
environmentMonitoring/environmentMonitoring.Database/Data/: EnvironmentAppDbContext.cs
environmentMonitoring/environmentMonitoring.Migrations/: environmentMonitoring.Migrations.csproj
environmentMonitoring/environmentMonitoring.Tests/: VirtualSensorViewTests.cs  environmentMonitoring.Tests.csproj
(+110 files in other folders)
