[project]
name = "generator"
version = "0.1.0"
description = ""
authors = [
    {name = "Jacob Lewis",email = "jacob@jaso5.com"}
]
readme = "README.md"
requires-python = ">=3.13"
dependencies = [
    "pyodbc (>=5.2.0,<6.0.0)"
]

[tool.poetry]
packages = [{include = "*", from = "src"}]

[tool.poetry.scripts]
generate = 'main:main'

[build-system]
requires = ["poetry-core>=2.0.0,<3.0.0"]
build-backend = "poetry.core.masonry.api"
